# toshima-tv-outage-notifier

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: check-outage.yml  lint.yml
data/: state.json
src/: __init__.py  config.py  main.py  notifier.py  scraper.py  state_manager.py
tests/: test_scraper.py  test_state_manager.py
tests/fixtures/: trouble_list.html
